Fix z-index maximized view

--- a/styles/cards-desktop.css
+++ b/styles/cards-desktop.css
@@ -144,7 +144,7 @@
     width: 100vw;
     background-color: rgba(255, 255, 255, 0.9);
     position: fixed;
-    z-index: 10;
+    z-index: 15;
     display: none; }
   .maximized__picture {
     margin: 64px 39.3px 78px auto;
