--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -161,7 +161,7 @@
     width: 100vw;
     background-color: rgba(255,255,255,0.90);
     position: fixed;
-    z-index: 10;
+    z-index: 15;
     display: none;
     @extend .margin-padding;
   }
